[gd_scene load_steps=5 format=3 uid="uid://dprf6vqlwia05"]

[ext_resource type="Script" uid="uid://b6hbgx1j57ov" path="res://map_item/enchantment_box.gd" id="1_oivw3"]
[ext_resource type="Script" uid="uid://chfth7ukdueqx" path="res://map_item/enchantment_box_area.gd" id="3_x3x7p"]
[ext_resource type="Texture2D" uid="uid://crj211y8xs3ei" path="res://placeholder_assets/construction_icon.png" id="3_x7aks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfrbp"]

[node name="EnchantmentBox" type="AspectRatioContainer"]
offset_right = 28.0
offset_bottom = 27.5
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_oivw3")

[node name="BoxBody" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="EnchantmentIcon" type="TextureRect" parent="BoxBody"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_x7aks")
expand_mode = 1
stretch_mode = 5

[node name="PhysicalArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2
script = ExtResource("3_x3x7p")

[node name="PhysicalHitbox" type="CollisionShape2D" parent="PhysicalArea"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_mfrbp")

[connection signal="resized" from="BoxBody" to="." method="_on_box_body_resized"]
